implemented current status dashboard mock

--- a/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
+++ b/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
@@ -4,11 +4,12 @@
   <li [routerLinkActive]="['active']">
     <a href="" [routerLink]="['/current-dashboard']">
       <i class="fa fa-link"></i>
-      <span>Current Env Status</span>
+      <span>Current Environments Status</span>
     </a>
   </li>
 
-  <li [routerLinkActive]="['active']">
+  <!--TODO uncomment during pages implementation-->
+  <!--<li [routerLinkActive]="['active']">
     <a href="" [routerLink]="['/period-dashboard']">
       <i class="fa fa-link"></i>
       <span>Period Dashboard</span>
@@ -20,7 +21,7 @@
       <i class="fa fa-link"></i>
       <span>Resource Dashboard</span>
     </a>
-  </li>
+  </li>-->
 
 
   <!--<li class="treeview">
