implemented current status dashboard

--- a/environment.monitor.ui/src/app/environment/currentstatus/dashboard/env-current-status-dashboard-component.html
+++ b/environment.monitor.ui/src/app/environment/currentstatus/dashboard/env-current-status-dashboard-component.html
@@ -8,7 +8,7 @@
 <div class="content container-fluid">
   <div class="row">
     <div class="col-lg-3 col-xs-12 col-md-6" *ngFor="let environment of environments">
-      <current-environment-status [environment]="environment"></current-environment-status>
+      <current-environment-status [environmentStatus]="environment"></current-environment-status>
     </div>
   </div>
 </div>
