implemented timescale status mock

--- a/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
+++ b/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
@@ -8,20 +8,21 @@
     </a>
   </li>
 
-  <!--TODO uncomment during pages implementation-->
-  <!--<li [routerLinkActive]="['active']">
-    <a href="" [routerLink]="['/period-dashboard']">
+
+  <li [routerLinkActive]="['active']">
+    <a href="" [routerLink]="['/timescale-dashboard']">
       <i class="fa fa-link"></i>
       <span>Period Dashboard</span>
     </a>
   </li>
 
-  <li [routerLinkActive]="['active']">
-    <a href="" [routerLink]="['/resource-dashboard']">
-      <i class="fa fa-link"></i>
-      <span>Resource Dashboard</span>
-    </a>
-  </li>-->
+  <!--TODO uncomment during pages implementation-->
+  <!-- <li [routerLinkActive]="['active']">
+     <a href="" [routerLink]="['/resource-dashboard']">
+       <i class="fa fa-link"></i>
+       <span>Resource Dashboard</span>
+     </a>
+   </li>-->
 
 
   <!--<li class="treeview">
