--- a/environment.monitor.ui/src/app/environment/timescale/dashboard/env-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/environment/timescale/dashboard/env-timescale-dashboard.component.html
@@ -10,7 +10,7 @@
     <div class="col-lg-12">
 
       <!--TODO remove-->
-      DEBUG: {{startDate}}{{endDate}}{{environment}}
+      DEBUG: {{statusTimerange| json}}
 
       <div class="box">
         <div class="box-header with-border">
@@ -27,24 +27,7 @@
         <!-- /.box-header -->
         <div class="box-body">
 
-          <div class="form-group">
-            <label>Date and time range:</label>
-
-            <div class="input-group">
-              <div class="input-group-addon">
-                <i class="fa fa-clock-o"></i>
-              </div>
-              <period-daterange-picker (onRangeSelected)="onRangeSelected($event)"></period-daterange-picker>
-            </div>
-            <!-- /.input group -->
-          </div>
-
-          <!--TODO mock-->
-          <div class="form-group">
-            <label>Environment:</label>
-            <env-picker (onEnvSelected)="onEnvSelected($event)"></env-picker>
-          </div>
-
+          <status-range-picker (onStatusRangeChanged)="onStatusRangeChanged($event)"></status-range-picker>
         </div>
         <!--/.box-body-->
       </div>
