--- a/environment.monitor.ui/src/app/shared/components/statusrangepicker/statusrange-picker.component.html
+++ b/environment.monitor.ui/src/app/shared/components/statusrangepicker/statusrange-picker.component.html
@@ -5,18 +5,17 @@
     <div class="input-group-addon">
       <i class="fa fa-clock-o"></i>
     </div>
+
+    <!--ng2-datepicker-->
     <input type="text" class="form-control" name="daterangeInput" daterangepicker [options]="options"
            (selected)="onDateSelected($event)"
-
-
     />
+
   </div>
-  <!-- /.input group -->
 </div>
 
 <div class="form-group">
   <label>Environment:</label>
-  <!--TODO MOCK-->
   <select class="form-control" (change)="onEnvChange($event.target.value)">
     <option *ngFor="let env of environments">{{env}}</option>
   </select>
