code refactoring on timescale dashboard & chart

--- a/environment.monitor.ui/src/app/environment/timescale/dashboard/env-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/environment/timescale/dashboard/env-timescale-dashboard.component.html
@@ -56,10 +56,7 @@
         <div class="box-body">
 
 
-          <environment-timescale-aggregated-chart
-            [statusTimerange]="statusTimerange"
-          >
-
+          <environment-timescale-aggregated-chart [statusTimerange]="statusTimerange">
           </environment-timescale-aggregated-chart>
 
           <!-- /.box-body -->
