refactored donut charts to show only if data is available

--- a/environment.monitor.ui/src/app/environment/timescale/aggregatedchart/env-timescale-aggregated-chart.component.html
+++ b/environment.monitor.ui/src/app/environment/timescale/aggregatedchart/env-timescale-aggregated-chart.component.html
@@ -1,2 +1,8 @@
-<div #containerPieChart></div>
+<div #chartContainer>
+  <div [hidden]="(data?.length>0)">
+    No Data
+  </div>
+  <div #containerPieChart [hidden]="!(data?.length>0)"></div>
+</div>
+
 {{data | json}}
