added component for resource timescale dashboard added to routing

--- a/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
+++ b/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
@@ -16,13 +16,12 @@
     </a>
   </li>
 
-  <!--TODO uncomment during pages implementation-->
-  <!-- <li [routerLinkActive]="['active']">
+  <li [routerLinkActive]="['active']">
      <a href="" [routerLink]="['/resource-dashboard']">
        <i class="fa fa-link"></i>
        <span>Resource Dashboard</span>
      </a>
-   </li>-->
+  </li>
 
 
   <!--<li class="treeview">
