--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -1,1 +1,96 @@
-resource details!
+<section class="content-header">
+  <h1>
+    Resource TimescaleDashboard
+    <small>Resource Details Over Time</small>
+  </h1>
+</section>
+
+
+<div class="content container-fluid">
+
+  <div class="row">
+    <div class="col-lg-3">
+
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Select View time Frame</h3>
+          <div class="box-tools pull-right">
+            <!-- Buttons, labels, and many other things can be placed here! -->
+            <!-- Here is a label for example -->
+            <button class="btn btn-box-tool" data-widget="collapse" type="button">
+              <i class="fa fa-minus"></i>
+            </button>
+          </div>
+          <!-- /.box-tools -->
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+
+          <status-range-picker></status-range-picker>
+        </div>
+        <!--/.box-body-->
+      </div>
+      <!-- /.box -->
+
+    </div>
+
+
+    <div class="col-lg-9">
+
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Select View time Frame</h3>
+          <div class="box-tools pull-right">
+            <!-- Buttons, labels, and many other things can be placed here! -->
+            <!-- Here is a label for example -->
+            <button class="btn btn-box-tool" data-widget="collapse" type="button">
+              <i class="fa fa-minus"></i>
+            </button>
+          </div>
+          <!-- /.box-tools -->
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+
+
+          <resource-timescale-table></resource-timescale-table>
+
+        </div>
+        <!--/.box-body-->
+      </div>
+      <!-- /.box -->
+
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Resource Status Details Over Time </h3>
+          <div class="box-tools pull-right">
+            <!-- Buttons, labels, and many other things can be placed here! -->
+            <!-- Here is a label for example -->
+            <button class="btn btn-box-tool" data-widget="collapse" type="button">
+              <i class="fa fa-minus"></i>
+            </button>
+          </div>
+          <!-- /.box-tools -->
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+
+
+          Chart to be here!
+
+          <!-- /.box-body -->
+        </div>
+        <!-- /.box -->
+
+      </div>
+    </div>
+
+  </div>
+</div>
