made required changes to support resources in timerange picker. Environment service now returns checked resources list along with env names.

--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -26,7 +26,12 @@
         <!-- /.box-header -->
         <div class="box-body">
 
-          <status-range-picker></status-range-picker>
+          <status-range-picker [statusTimerange]="statusTimerange"
+                               (onStatusRangeChanged)="onStatusRangeChanged($event)"
+                               [environments]="environments"
+                               [showResPicker]="true">
+
+          </status-range-picker>
         </div>
         <!--/.box-body-->
       </div>
