--- a/environment.monitor.ui/src/app/shared/components/statusrangepicker/statusrange-picker.component.html
+++ b/environment.monitor.ui/src/app/shared/components/statusrangepicker/statusrange-picker.component.html
@@ -17,7 +17,14 @@
 <div class="form-group">
   <label>Environment:</label>
   <select class="form-control" (change)="onEnvChange($event.target.value)">
-    <option *ngFor="let env of environments">{{env}}</option>
+    <option *ngFor="let env of environments">{{env.environmentName}}</option>
+  </select>
+</div>
+
+<div class="form-group" *ngIf="showResPicker && environment">
+  <label>Resource:</label>
+  <select class="form-control" (change)="onResourceChange($event.target.value)">
+    <option *ngFor="let resource of environment.checkedResources">{{resource.name}}</option>
   </select>
 </div>
 
