--- a/environment.monitor.ui/src/app/resource/timescale/table/resource-timescale-table.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/table/resource-timescale-table.component.html
@@ -1,6 +1,6 @@
 <!-- //TODO Remove hardconde-->
 
-<table class="table table-hover">
+<table class="table table-hover" *ngIf="aggStatus">
   <tbody>
   <tr>
     <th>Status</th>
@@ -8,43 +8,26 @@
     <th>Percentage</th>
     <th>Graph</th>
   </tr>
-  <tr>
-    <td><strong>Online</strong></td>
-    <td>100</td>
-    <td>100%</td>
+  <tr *ngFor="let status of aggStatus.resourceStatuses">
+    <td><strong>{{statusEnum[status.status]}}</strong></td>
+    <td>{{status.count}}</td>
+    <td>{{(status.count / aggStatus.count)*100 | number:'1.0-0' }} %</td>
     <td>
-      <div class="progress progress-xs">
-        <div class="progress-bar progress-bar-success" style="width: 55%"></div>
-      </div>
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Unavailable</strong></td>
-    <td>100</td>
-    <td>100%</td>
-    <td>
-      <div class="progress progress-xs">
-        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-      </div>
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Border Line</strong></td>
-    <td>100</td>
-    <td>100%</td>
-    <td>
-      <div class="progress progress-xs">
-        <div class="progress-bar progress-bar-warning" style="width: 55%"></div>
-      </div>
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Unknown</strong></td>
-    <td>100</td>
-    <td>100%</td>
-    <td>
-      <div class="progress progress-xs">
-        <div class="progress-bar progress-bar-default" style="width: 55%"></div>
+
+      <div class="progress progress-xs" [ngSwitch]="status.status">
+
+        <!-- TODO Define component for progress bar-->
+        <!--Online-->
+        <div *ngSwitchCase="statusEnum.Online" class="progress-bar progress-bar-success"
+             [style.width.%]="(status.count / aggStatus.count)*100"></div>
+        <!--BorderLine-->
+        <div *ngSwitchCase="statusEnum.BorderLine" class="progress-bar progress-bar-warning"
+             [style.width.%]="(status.count / aggStatus.count)*100"></div>
+        <!--Unavailable-->
+        <div *ngSwitchCase="statusEnum.Unavailable" class="progress-bar progress-bar-danger"
+             [style.width.%]="(status.count / aggStatus.count)*100"></div>
+        <!--Unknown-->
+        <div *ngSwitchCase="statusEnum.Unknown" class="progress-bar" [style.width.%]="(status.count / aggStatus.count)*100"></div>
       </div>
     </td>
   </tr>
