--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -88,7 +88,7 @@
         <div class="box-body">
 
 
-          Chart to be here!
+          <resource-timescale-chart></resource-timescale-chart>
 
           <!-- /.box-body -->
         </div>
