service for extraction of statuses from server, small refactoring of chart class structure

--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -88,7 +88,7 @@
         <div class="box-body">
 
 
-          <resource-timescale-chart></resource-timescale-chart>
+          <resource-timescale-chart *ngIf="statusTimerange" [statusTimerange]="statusTimerange"></resource-timescale-chart>
 
           <!-- /.box-body -->
         </div>
