--- a/environment.monitor.ui/src/app/environment/currentstatus/panel/env-current-status.component.html
+++ b/environment.monitor.ui/src/app/environment/currentstatus/panel/env-current-status.component.html
@@ -31,7 +31,7 @@
         </span>
         </td>
         <td><span><strong>{{status.resource.name}}</strong></span></td>
-        <td>{{status.updated}}</td>
+        <td>{{status.updated| date:'HH:mm:ss'}}</td>
 
       </tr>
       </tbody>
