resource details progress bar for unknown refactored to be grey, added views for data unavailable on resource dashboard added wrapper component on details chart for future enchancements

--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -88,8 +88,9 @@
         <div class="box-body">
 
 
-          <resource-timescale-chart *ngIf="statusTimerange" [statusTimerange]="statusTimerange"></resource-timescale-chart>
-
+          <div *ngIf="statusTimerange">
+            <resource-timescale-details-panel [statusTimerange]="statusTimerange"></resource-timescale-details-panel>
+          </div>
           <!-- /.box-body -->
         </div>
         <!-- /.box -->
