--- a/environment.monitor.ui/src/app/resource/timescale/table/resource-timescale-table.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/table/resource-timescale-table.component.html
@@ -1,6 +1,7 @@
 <!-- //TODO Remove hardconde-->
 
-<table class="table table-hover" *ngIf="aggStatus">
+<div *ngIf="aggStatus">
+  <table class="table table-hover" *ngIf="aggStatus?.resourceStatuses">
   <tbody>
   <tr>
     <th>Status</th>
@@ -8,7 +9,7 @@
     <th>Percentage</th>
     <th>Graph</th>
   </tr>
-  <tr *ngFor="let status of aggStatus.resourceStatuses">
+  <tr *ngFor="let status of aggStatus?.resourceStatuses">
     <td><strong>{{statusEnum[status.status]}}</strong></td>
     <td>{{status.count}}</td>
     <td>{{(status.count / aggStatus.count)*100 | number:'1.0-0' }} %</td>
@@ -27,9 +28,18 @@
         <div *ngSwitchCase="statusEnum.Unavailable" class="progress-bar progress-bar-danger"
              [style.width.%]="(status.count / aggStatus.count)*100"></div>
         <!--Unknown-->
-        <div *ngSwitchCase="statusEnum.Unknown" class="progress-bar" [style.width.%]="(status.count / aggStatus.count)*100"></div>
+        <div *ngSwitchCase="statusEnum.Unknown" class="progress-bar progress-bar-default"
+             [style.width.%]="(status.count / aggStatus.count)*100"></div>
       </div>
     </td>
   </tr>
   </tbody>
 </table>
+</div>
+
+<div *ngIf="! aggStatus">
+  <div class="text-center text-muted">
+    <div><i class="fa  fa-table fa-5x align-middle"></i></div>
+    <div><h3>No Data Available For Selected Time Frame</h3></div>
+  </div>
+</div>
