--- a/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
+++ b/environment.monitor.ui/src/app/sidebar/app-sidebar-menu.component.html
@@ -3,23 +3,23 @@
   <li class="header">HEADER</li>
   <li [routerLinkActive]="['active']">
     <a href="" [routerLink]="['/current-dashboard']">
-      <i class="fa fa-link"></i>
-      <span>Current Environments Status</span>
+      <i class="fa fa-refresh"></i>
+      <span>Current Status</span>
     </a>
   </li>
 
 
   <li [routerLinkActive]="['active']">
     <a href="" [routerLink]="['/timescale-dashboard']">
-      <i class="fa fa-link"></i>
-      <span>Period Dashboard</span>
+      <i class="fa  fa-sitemap"></i> <!-- fa-sitemap -->
+      <span>Environment Availability </span>
     </a>
   </li>
 
   <li [routerLinkActive]="['active']">
      <a href="" [routerLink]="['/resource-dashboard']">
-       <i class="fa fa-link"></i>
-       <span>Resource Dashboard</span>
+       <i class="fa  fa-history"></i>
+       <span>Resource Availability</span>
      </a>
   </li>
 
