caption change for resource status details table

--- a/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
+++ b/environment.monitor.ui/src/app/resource/timescale/dashboard/resource-timescale-dashboard.component.html
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    Resource TimescaleDashboard
+    Resource Timescale Dashboard
     <small>Resource Details Over Time</small>
   </h1>
 </section>
@@ -44,7 +44,7 @@
 
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Select View time Frame</h3>
+          <h3 class="box-title">Aggregated Resource Statuses</h3>
           <div class="box-tools pull-right">
             <!-- Buttons, labels, and many other things can be placed here! -->
             <!-- Here is a label for example -->
